add firebase google auth

--- a/src/components/signIn/signIn.scss
+++ b/src/components/signIn/signIn.scss
@@ -1,3 +1,9 @@
 .sign-in {
-	width: 35%;
+	width: 380px;
+	& .btns {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
 }
