--- a/src/components/customButton/customButton.scss
+++ b/src/components/customButton/customButton.scss
@@ -19,4 +19,10 @@
 		color: black;
 		border: 1px solid black;
 	}
+	&.google-sign-in {
+		background-color: rgb(121, 121, 206);
+		&:hover {
+			background-color: transparent;
+		}
+	}
 }
