--- a/src/components/collectionItem/collectionItem.scss
+++ b/src/components/collectionItem/collectionItem.scss
@@ -4,7 +4,27 @@
 	flex-direction: column;
 	height: 350px;
 	align-items: center;
+	position: relative;
+	.custom-button {
+		width: 80%;
+		position: absolute;
+		bottom: 2rem;
+		display: none;
+		&:hover {
+			background-color: black;
+			color: white;
+		}
+	}
 
+	&:hover {
+		.image {
+			width: 100%;
+			opacity: 0.7;
+		}
+		.custom-button {
+			display: flex;
+		}
+	}
 	.image {
 		width: 100%;
 		height: 95%;
