--- a/src/components/customButton/customButton.scss
+++ b/src/components/customButton/customButton.scss
@@ -13,6 +13,9 @@
 	font-weight: bolder;
 	border: none;
 	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
 	&:hover {
 		background-color: white;
@@ -24,5 +27,10 @@
 		&:hover {
 			background-color: transparent;
 		}
+	}
+	&.invert {
+		background-color: white;
+		color: black;
+		border: 1px solid black;
 	}
 }
