--- a/src/hompage/checkoutPage/CheckoutPage.scss
+++ b/src/hompage/checkoutPage/CheckoutPage.scss
@@ -5,6 +5,10 @@
 	flex-direction: column;
 	align-items: center;
 	margin: 50px auto 0;
+	.payment-card {
+		color: red;
+		text-align: center;
+	}
 
 	.checkout-header {
 		width: 100%;
