--- a/client/src/components/collectionOverview/collectionOverview.scss
+++ b/client/src/components/collectionOverview/collectionOverview.scss
@@ -1,4 +1,8 @@
 .collections-overview {
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
+}
+
+@media screen and (max-width: 1000px) {
 }
