--- a/client/src/components/directory/directory.scss
+++ b/client/src/components/directory/directory.scss
@@ -5,3 +5,12 @@
 	flex-wrap: wrap;
 	justify-content: space-between;
 }
+
+@media screen and (max-width: 500px) {
+	.directory-menu {
+		flex-direction: column;
+	}
+	.menu-item {
+		margin: 1rem;
+	}
+}
